--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@mui/material": "^6.4.8",
     "firebase": "^11.5.0",
     "next": "15.2.3",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
