--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.4.8",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
+    "mobx": "^6.13.7",
+    "mobx-react": "^9.2.0",
     "next": "15.2.3",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
