--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.24.1",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
+    "axios": "^1.9.0",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "mobx": "^6.13.7",
